--- a/lab/day4/largest_no.html
+++ b/lab/day4/largest_no.html
@@ -10,14 +10,6 @@ the result in the screen. -->
     <script src="largest_no.js"></script>
   </head>
   <body>
-    <input type="number" placeholder="Enter Number 1" />
-    <br />
-    <br />
-    <input type="number" placeholder="Enter Number 2" />
-    <br /><br />
-
-    <input type="number" placeholder="Enter Number 3" />
-    <br /><br />
-    <input type="button" value="largest number " onclick="large_no" />
+    <input type="button" value="largest number " onclick="large_no(10,20,30)" />
   </body>
 </html>
